--- a/L4-Telephone/package.json
+++ b/L4-Telephone/package.json
@@ -2,6 +2,8 @@
   "name": "hardhat-project",
   "dependencies": {
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "dotenv": "^16.0.0",
     "hardhat-deploy": "^0.11.0"
   }
 }
