--- a/L8-Vault/package.json
+++ b/L8-Vault/package.json
@@ -7,5 +7,10 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.6.1",
     "hardhat": "^2.9.1"
+  },
+  "dependencies": {
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "dotenv": "^16.0.0",
+    "web3": "^1.7.1"
   }
 }
